--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -49,7 +49,7 @@
       list-style-type: none;
       margin: 0;
       padding: 0;
-      gap: 90px;
+      gap: 20px 90px;
   
    @media screen and (min-width: $max-w-base) {
       grid-template-columns: repeat(2, 1fr);
@@ -246,9 +246,16 @@
 
   .book-caption {
     color: $green-seafoam;
-    font-size: $medium-font-size;
+    font-size: $base-font-size;
     margin-top: $x-small-spacing;
     max-width: 500px;
+    padding: $base-spacing;
+
+    @media screen and (min-width: $max-w-base) {
+      font-size: $medium-font-size;
+
+    }
+
   }
 }
 
